--- a/Empath-Agent-Trip-Dashboard.html
+++ b/Empath-Agent-Trip-Dashboard.html
@@ -79,7 +79,7 @@ border-radius: 20px;
 </div>
 <span class="ml-3">Meetings</span>
 </a>
-<a href="https://readdy.ai/home/cebd9b50-d804-443f-8e18-41920a3974d1/e2be5316-9cca-4123-9c0e-bee75a861e8c" data-readdy="true" class="flex items-center px-4 py-3 text-gray-600 hover:bg-gray-50">
+<a href="#" class="flex items-center px-4 py-3 bg-gray-50 text-primary">
 <div class="w-5 h-5 flex items-center justify-center">
 <i class="ri-message-3-line"></i>
 </div>
